[package]
name = "erinite-cli"
version = "0.1.0"
authors = ["danielytics <danielytics@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "erin"

[dependencies]
toml = "0.5"
regex = "1"
colored = "2"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
liquid = "0.20"
rust-embed="5.5.1"
serde = "1.0.114"